--- a/styles/presets.sass
+++ b/styles/presets.sass
@@ -1,4 +1,5 @@
 @mixin mixin-flex($just, $alig, $direct)
+    display: flex
     justify-content: $just
     align-items: $alig
     flex-direction: $direct
