--- a/styles/menu.sass
+++ b/styles/menu.sass
@@ -1,4 +1,4 @@
-@import url('./presets.sass') as pres;
+@use './presets.sass' as pres
 
 $color-principal: #503A28
 $color-secundario: #FCEBD4
@@ -14,9 +14,9 @@ body
     flex-direction: row
     gap: 50px
     height: 85%
+    @include pres.mixin-flex(center, center, row)
     justify-content: center
     align-items: center
-    border: solid
 
     .sub-menu
         width: 33%
